<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item android:title="@string/profile">

            <menu>

                <item
                    android:id="@+id/settings"
                    android:title="@string/settings" />

                <item
                    android:id="@+id/log_out"
                    android:title="@string/logout" />


            </menu>

        </item>

    </group>

    <item android:title="">

        <menu>

            <item
                android:id="@+id/about_us"
                android:title="@string/about_us" />

            <item
                android:id="@+id/terms_conditions"
                android:title="@string/terms_conditions" />

            <item
                android:id="@+id/contact_us"
                android:title="@string/contact_us" />

        </menu>

    </item>

</menu>