<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SuccessFailedPaymentStatusScreen">

    <ImageView
        android:id="@+id/payment_success_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="272dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/payment_success" />

    <TextView
        android:id="@+id/payment_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payment_success_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/payment_success"
        android:textColor="@color/colorBlack"
        android:textSize="24sp" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payment_header"
        android:layout_centerHorizontal="true"
        android:background="@color/colorBlue"
        android:text="@string/continues"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorWhite" />

</RelativeLayout>