<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/app_logo" />

    <TextView
        android:visibility="gone"
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/app_header"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="60dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/colorBlack"
            android:hint="@string/otp"
            app:boxStrokeColor="@color/colorBlack"
            app:hintTextColor="@color/colorBlack"
            app:startIconDrawable="@mipmap/lock_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:textColor="@color/colorBlack" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_send_otp_button"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_below="@+id/login_phone_number"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_design"
            android:text="@string/next"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </RelativeLayout>

    <include
        layout="@layout/progress_bar"
        android:visibility="gone" />


</RelativeLayout>