<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NewUserDetails">

    <TextView
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/skip"
        android:textColor="@color/colorBlue"
        android:textSize="16sp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="12dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/back_button"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_details_profile_picture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/user_profile" />

            <Button
                android:id="@+id/choose_profile"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="45dp"
                android:background="@drawable/button_design"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/choose_profile_picture"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_details_user_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/colorBlack"
            android:hint="@string/user_name"
            android:theme="@style/TextInputLayoutAppearance"
            app:boxStrokeColor="@color/colorBlack"
            app:hintTextColor="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_details_user_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/colorBlack" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_details_email_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/colorBlack"
            android:hint="@string/email_address"
            android:theme="@style/TextInputLayoutAppearance"
            app:boxStrokeColor="@color/colorBlack"
            app:hintTextColor="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_details_email_address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/colorBlack" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_send_otp_button"
            android:layout_width="120dp"
            android:layout_height="43dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_design"
            android:text="@string/save"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

    </LinearLayout>

    <include
        layout="@layout/progress_bar"
        android:visibility="gone" />

</RelativeLayout>