<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/play_list_song_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/play_list_song_image"
            android:fontFamily="@font/lato_bold"
            android:text="@string/song_name"
            android:textColor="@color/colorBlack"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/song_artiest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/song_title"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/play_list_song_image"
            android:alpha=".3"
            android:text="@string/artist_name"
            android:textColor="@color/colorBlack"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/song_play_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:src="@mipmap/play_button"
            android:visibility="visible"
            android:contentDescription="@string/app_name" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:background="@color/colorWhite" />

</LinearLayout>