<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteShade"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".Activities.SubCategoryActivity">


    <RelativeLayout
        android:id="@+id/sub_category_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhiteShade"
        android:padding="6dp">

        <ImageView
            android:id="@+id/sub_category_back_button"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/back_button" />

        <TextView
            android:id="@+id/sub_category_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_toEndOf="@+id/sub_category_back_button"
            android:fontFamily="@font/lato_black"
            android:text="@string/sub_category"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/sub_category_search_songs_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/sub_category_search_button"
            android:background="@drawable/edit_text_background"
            android:hint="@string/search_songs"
            android:inputType="text"
            android:paddingLeft="12dp"
            android:paddingTop="9dp"
            android:paddingRight="12dp"
            android:paddingBottom="9dp"
            android:textCursorDrawable="@color/colorBlack"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/sub_category_search_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/search_button"
            android:elevation="2dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/search_icon" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sub_category_songs_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="6dp" />

        <include
            layout="@layout/progress_bar"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/sub_category_view_song_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:visibility="gone">

            <include layout="@layout/single_song_view_layout" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
